--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
   "name": "upkyp_cron_two",
   "version": "1.0.0",
-  "main": "index.js",
-   "scripts": {
-    "dev": "ts-node-dev --respawn src/index.ts",
+  "private": true,
+  "type": "commonjs",
+
+  "scripts": {
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+
   "dependencies": {
     "axios": "^1.13.5",
-    "dotenv": "^17.2.4",
-    "express": "^5.2.1",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "mysql2": "^3.16.3"
   },
+
   "devDependencies": {
-    "@types/express": "^5.0.6",
-    "@types/node": "^25.2.2",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.11.30",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
   }
